# aws-sam-with-localstack-and-moto-practice

./: .gitignore  README.md
api-gateway-project/: README.md  env.sample.json
api-gateway-project/app/: .pre-commit-config.yaml  alembic.ini  pyproject.toml
api-gateway-project/app/migration/: env.py
api-gateway-project/app/src/core/: config.py
api-gateway-project/app/src/database/: __init__.py  session.py
api-gateway-project/app/src/schema/: __init__.py
s3-trigger-project/: README.md  docker-compose.yaml  env.sample.json  template.yaml
s3-trigger-project/app/: Makefile  pyproject.toml
s3-trigger-project/app/src/constant/: __init__.py  aws.py
s3-trigger-project/app/src/core/: config.py
s3-trigger-project/app/src/custom/: __init__.py  aws_types.py
s3-trigger-project/app/src/service/: message.py  s3.py  slack.py
s3-trigger-project/dockerfiles/: Dockerfile  Dockerfile.MockingAWSS3
s3-trigger-project/events/: event.sample.json
s3-trigger-project/scripts/: mocking_aws_s3.sh
simple-function-project/: .dockerignore  Dockerfile  README.md  env.sample.json  template.yaml
simple-function-project/app/: Makefile  pyproject.toml
simple-function-project/app/src/constant/: http_response.py
simple-function-project/app/src/core/: config.py
simple-function-project/app/src/custom/: __init__.py  aws_types.py
simple-function-project/events/: event.sample.json
sqs-trigger-project/: .dockerignore  README.md  env.sample.json  template.yaml
sqs-trigger-project/app/: Makefile  pyproject.toml
sqs-trigger-project/app/src/: main.py
(+5 files in other folders)
