[tool.poetry]
name = "api-gateway-project"
version = "1"
description = "AWS Lambda with AWS API Gateway"
authors = ["Taehyun Lee <0417taehyun@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aws-sam-cli = "^1.82.0"
localstack = "^2.0.2"
slack-sdk = "^3.21.3"
boto3 = "^1.25.0"
sqlalchemy = "^2.0.12"
alembic = "^1.10.4"
pydantic = "^1.10.7"

[tool.poetry.group.linter.dependencies]
pre-commit = "^2.21.0"
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.11.4"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.isort]
py_version = 39
skip = ["__init__.py"]
multi_line_output = 3
include_trailing_comma = true
profile = "black"

[tool.mypy]
python_version = "3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
